add database task definition

--- a/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
+++ b/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
@@ -23,6 +23,16 @@ Parameters:
     Type: String
     Default: debug
 
+  VoteDatabaseHttpProxyImage:
+    Type: String
+    Description: Vote App Database HTTP Proxy image
+    Default: "subfuzion/vote-database-proxy:1.0.15"
+
+  VoteDatabaseImage:
+    Type: String
+    Description: Vote App Database image
+    Default: "mongo:3.6"
+
   VoteVotesImage:
     Type: String
     Description: Vote App Votes image
@@ -63,6 +73,10 @@ Parameters:
     Description: Grafana Web image
     Default: "grafana/grafana:latest"
 
+  VoteDatabaseNodeId:
+    Type: String
+    Description: VirtualNode id of the database service
+
   VoteVotesNodeId:
     Type: String
     Description: VirtualNode id of the reports service
@@ -87,6 +101,176 @@ Parameters:
                  traffic to this service.
 
 Resources:
+
+  ### ==================================
+  ### database.default.svc.cluster.local
+  ### ==================================
+  DatabaseServiceDiscoveryRecord:
+    Type: 'AWS::ServiceDiscovery::Service'
+    Properties:
+      Name: "database"
+      DnsConfig:
+        NamespaceId:
+          'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceDiscoveryNamespace"
+        DnsRecords:
+          - Type: A
+            TTL: 300
+      HealthCheckCustomConfig:
+        FailureThreshold: 1
+
+  DatabaseService:
+    Type: 'AWS::ECS::Service'
+    Properties:
+      Cluster:
+        'Fn::ImportValue': !Sub "${EnvironmentName}:ECSCluster"
+      DeploymentConfiguration:
+        MaximumPercent: 200
+        MinimumHealthyPercent: 100
+      DesiredCount: 1
+      LaunchType: EC2
+      ServiceRegistries:
+        - RegistryArn:
+            'Fn::GetAtt': DatabaseServiceDiscoveryRecord.Arn
+      NetworkConfiguration:
+        AwsvpcConfiguration:
+          AssignPublicIp: DISABLED
+          SecurityGroups:
+            - 'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceSecurityGroup"
+          Subnets: 
+            - 'Fn::ImportValue': !Sub "${EnvironmentName}:PrivateSubnet1"
+            - 'Fn::ImportValue': !Sub "${EnvironmentName}:PrivateSubnet2"
+      TaskDefinition: { Ref: DatabaseTaskDefinition }
+
+  DatabaseTaskDefinition:
+    Type: 'AWS::ECS::TaskDefinition'
+    Properties:
+      TaskRoleArn: 
+        'Fn::ImportValue': !Sub "${EnvironmentName}:TaskIamRole"
+      Volumes:
+        - Name: "envoy-xray-tracing-config"
+          Host:
+            SourcePath: "/home/ec2-user/xray-tracing.yaml"
+      ContainerDefinitions:
+        - Name: "app"
+          Image: { Ref: VoteDatabaseHttpProxyImage }
+          Essential: true
+          LogConfiguration:
+            LogDriver: "awslogs"
+            Options:
+              awslogs-group:
+                'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceLogGroup"
+              awslogs-region: { Ref: "AWS::Region" }
+              awslogs-stream-prefix: "database-http-proxy-app"
+          Environment:
+            - Name: "PORT"
+              Value: "9080"
+            - Name: "DATABASE_URI"
+              Value: "mongodb://localhost:27017/voting"
+        - Name: database
+          Cpu: 440
+          Memory: 440
+          Image: !Ref 'VoteDatabaseImage'
+          LogConfiguration:
+            LogDriver: 'awslogs'
+            Options:
+              awslogs-group:
+                'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceLogGroup"
+              awslogs-region: { Ref: "AWS::Region" }
+              awslogs-stream-prefix: "mongo"
+        - Name: xray-daemon
+          Essential: false
+          Cpu: 32
+          Memory: 64
+          Image: !Ref 'XRayImageUrl'
+          PortMappings:
+            - ContainerPort: 2000
+              Protocol: udp
+          Environment:
+            - Name: "AWS_REGION"
+              Value: !Ref 'AWS::Region'
+          LogConfiguration:
+            LogDriver: 'awslogs'
+            Options:
+              awslogs-group:
+                'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceLogGroup"
+              awslogs-region: !Ref 'AWS::Region'
+              awslogs-stream-prefix: 'xray'
+        - Name: envoy
+          Image: { Ref: EnvoyImage }
+          Essential: true
+          User: "1337"
+          LogConfiguration:
+            LogDriver: "awslogs"
+            Options:
+              awslogs-group:
+                'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceLogGroup"
+              awslogs-region: { Ref: "AWS::Region" }
+              awslogs-stream-prefix: "database-envoy"
+          MountPoints:
+            - SourceVolume: "envoy-xray-tracing-config"
+              ContainerPath: "/tmp/xray-tracing.yaml"
+          Environment:
+            - Name: "APPMESH_VIRTUAL_NODE_NAME"
+              Value: !Ref VoteDatabaseNodeId
+            - Name: "ENVOY_LOG_LEVEL"
+              Value: { Ref: EnvoyLogLevel }
+            - Name: "ENVOY_TRACING_CFG_FILE"
+              Value: "/tmp/xray-tracing.yaml"
+            - Name: "AWS_REGION"
+              Value: "us-west-2"
+        - Name: "proxyinit"
+          Image: { Ref: SideCarRouterManagerImage }
+          Essential: false
+          LogConfiguration:
+            LogDriver: "awslogs"
+            Options:
+              awslogs-group:
+                'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceLogGroup"
+              awslogs-region: { Ref: "AWS::Region" }
+              awslogs-stream-prefix: "database-proxyinit"
+          LinuxParameters:
+            Capabilities:
+              Add:
+                - "NET_ADMIN"
+          Environment:
+            - Name: "APPMESH_START_ENABLED"
+              Value: "1"
+            - Name: "APPMESH_USE_TPROXY"
+              Value: "0"
+            - Name: "APPMESH_IGNORE_UID"
+              Value: "1337"
+            - Name: "APPMESH_ENVOY_INGRESS_PORT"
+              Value: "15000"
+            - Name: "APPMESH_ENVOY_EGRESS_PORT"
+              Value: "15001"
+            - Name: "APPMESH_APP_PORTS"
+              Value: "9080"
+            - Name: "APPMESH_EGRESS_IGNORED_IP"
+              Value: { Ref: LatticeEgressIgnoredIpCsv }
+        - Name: cloudwatch_agent
+          Image: !Ref CloudWatchAgentImage
+          Essential: false
+          Cpu: 100
+          Memory: 128
+          LogConfiguration:
+            LogDriver: awslogs
+            Options:
+              awslogs-group:
+                'Fn::ImportValue': !Sub "${EnvironmentName}:ECSServiceLogGroup"
+              awslogs-region: !Ref 'AWS::Region'
+              awslogs-stream-prefix: cloudwatch-agent
+          Environment:
+            - Name: DOWNSTREAM_SERVICE_NAME
+              Value: database
+            - Name: ENVOY_ADMIN_HOST
+              Value: "localhost:9901"
+            - Name: AWS_REGION
+              Value: !Ref "AWS::Region"
+      ExecutionRoleArn:
+        'Fn::ImportValue': !Sub "${EnvironmentName}:TaskExecutionIamRoleArn"
+      NetworkMode: "awsvpc"
+      Memory: 256
+
 
   ### =================================
   ### votes.default.svc.cluster.local
@@ -402,7 +586,6 @@ Resources:
       Memory: 256
 
 
-
   ### =================================
   ### web.default.svc.cluster.local
   ### =================================
@@ -608,6 +791,8 @@ Resources:
         'Fn::ImportValue': !Sub "${EnvironmentName}:TaskExecutionIamRoleArn"
       NetworkMode: "awsvpc"
       Memory: 256
+
+  ### =================================
 
   # Web load balancer resources
   WebTargetGroup:
