--- a/src/queue/package.json
+++ b/src/queue/package.json
@@ -10,18 +10,19 @@
     "url": "https://github.com/subfuzion/node-redis-queue.git"
   },
   "scripts": {
-    "test": "mocha --ui tdd"
+    "test": "mocha --ui tdd",
+    "docker-test": "docker-compose -f ./docker-compose.test.yml build && docker-compose -f ./docker-compose.test.yml run sut"
   },
   "engines": {
     "node": ">=v8.0.0"
   },
   "dependencies": {
-    "ioredis": "^4.2.0",
+    "ioredis": "^4.6.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "config": "^2.0.1",
-    "mocha": "^5.2.0",
-    "toml": "^2.3.3"
+    "config": "^3.0.1",
+    "mocha": "^6.0.2",
+    "toml": "^3.0.0"
   }
 }
